--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = validate
 
-#server.port=8000
+server.port=8000
 
 #spring.mvc.view.prefix = /WEB-INF/views/
 #spring.mvc.view.suffix = .html
