--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-stomp": "^3.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
