--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "lodash": "~4.17.5",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-stomp": "^3.0.1"
+    "react-redux": "^5.0.7",
+    "react-stomp": "^3.0.1",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
