--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "font-awesome": "^4.7.0",
     "lodash": "~4.17.5",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.1",
