--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-stomp": "^3.0.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
