--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -11,6 +11,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-stomp": "^3.0.1",
     "redux": "^4.0.0"
   },
