--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -16,11 +16,11 @@
     "react-router-dom": "^4.2.2",
     "react-stomp": "^3.0.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "redux-devtools-extension": "^2.13.2"
   },
   "devDependencies": {
-    "react-scripts": "1.1.4",
-    "redux-devtools-extension": "^2.13.2"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
