--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
+    "dom-helpers": "^3.3.1",
     "font-awesome": "^4.7.0",
     "lodash": "~4.17.5",
     "material-ui": "^0.20.0",
@@ -15,9 +16,10 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-stomp": "^3.0.1",
+    "react-virtualized": "^9.18.5",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
