--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -13,6 +13,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-notifications": "^1.4.3",
+    "react-player-controls": "^0.5.20",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-stomp": "^3.0.1",
