--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,14 @@
-spring.datasource.url = jdbc:h2:file:./datas/h2db-datas
-spring.datasource.username = sa
-spring.datasource.password = sa
-spring.datasource.driverClassName = org.h2.Driver
-spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.ddl-auto = validate
+spring.datasource.url=jdbc:h2:file:./datas/mytunes-db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+#spring.h2.console.path=/h2console
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=validate
 
 server.port=8000
 
-#spring.mvc.view.prefix = /WEB-INF/views/
-#spring.mvc.view.suffix = .html
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.html
