--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.5",
     "dom-helpers": "^3.3.1",
     "font-awesome": "^4.7.0",
+    "js-hash-code": "^1.0.0",
     "lodash": "~4.17.5",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.1",
