--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-sortable-hoc": "^0.6.8",
+    "react-sortable-tree": "^2.1.1",
     "react-stomp": "^3.0.1",
     "react-virtualized": "^9.18.5",
     "redux": "^4.0.0",
