--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,6 @@ server.port=8000
 
 #spring.mvc.view.prefix=/WEB-INF/views/
 #spring.mvc.view.suffix=.html
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
