--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -20,6 +20,7 @@
     "react-sortable-hoc": "^0.6.8",
     "react-sortable-tree": "^2.1.1",
     "react-stomp": "^3.0.1",
+    "react-treebeard": "^2.1.0",
     "react-virtualized": "^9.18.5",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
