--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-favicon": "0.0.14",
     "react-notifications": "^1.4.3",
     "react-player-controls": "^0.5.20",
     "react-redux": "^5.0.7",
