--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -25,7 +25,8 @@
     "react-virtualized": "^9.18.5",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sockjs-client": "^1.1.5"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
