--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -10,11 +10,12 @@
     "js-hash-code": "^1.0.0",
     "lodash": "~4.17.5",
     "material-ui": "^0.20.0",
+    "onsenui": "^2.10.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-favicon": "0.0.14",
     "react-notifications": "^1.4.3",
+    "react-onsenui": "^1.11.1",
     "react-player-controls": "^0.5.20",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
