--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -13,6 +13,7 @@
     "onsenui": "^2.10.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
+    "react-device-detect": "^1.5.8",
     "react-dom": "^16.3.1",
     "react-notifications": "^1.4.3",
     "react-onsenui": "^1.11.1",
