--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.3",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "dom-helpers": "^3.3.1",
