--- a/src/mytunes-front/package.json
+++ b/src/mytunes-front/package.json
@@ -16,6 +16,7 @@
     "react": "^16.3.1",
     "react-device-detect": "^1.5.8",
     "react-dom": "^16.3.1",
+    "react-fontawesome": "^1.6.1",
     "react-notifications": "^1.4.3",
     "react-onsenui": "^1.11.1",
     "react-player-controls": "^0.5.20",
